--- a/Sort/선택 정렬.md
+++ b/Sort/선택 정렬.md
@@ -1,6 +1,6 @@
 # 선택 정렬
 
-+ 개기본 3정렬 형제 중 둘째로, 최소값 혹은 최대값을 찾아 정렬하는 방식이다. 첫째인 버블 정렬과 달리, 최소 혹은 최대값을 찾아 정렬하므로 반복수가 적은 장점이있다. 코드를 작성하기 쉬우면서 버블 정렬보다 속도가 빨라 자주 사용하는 정렬 방식이다. 배열의 크기가 커지면 초기값을 찾는데 시간이 걸리는 단점이 있지만, 죄다 돌리는 버블보다는 그래도 좀 나은듯.
++ 개기본 3정렬 형제 중 둘째로, 순차적으로 첫번째 인덱스부터 최소값 혹은 최대값을 찾아 정렬하는 방식이다. 들어갈 자리에 순차적으로 값을 선택해 넣는다고 해서 선택 정렬 또는 순차 정렬이라고 한다. 코드가 이해하기 쉽지만, 성능상 문제가 여전히 존재한다.
 
 # 1. 코드
 
